--- a/src/routes/registro/registro.css
+++ b/src/routes/registro/registro.css
@@ -47,7 +47,7 @@
     align-items: center;
     font-size: 1.2rem;
     border: none;
-    background-color: white;
+    background-color: rgb(170, 170, 170);
     font-weight: bold;
   }
   
