--- a/src/routes/page/homepage/homepage.module.css
+++ b/src/routes/page/homepage/homepage.module.css
@@ -122,6 +122,13 @@
     border-radius: 10px; /* Opcional, para darle bordes redondeados */
   }
   
+.talleresMesContainer{
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
   .inscribeteButton {
     background-color: #ff6347; /* Color del botón */
     color: white;
@@ -131,4 +138,46 @@
     cursor: pointer;
     font-size: 1rem;
     margin-top: 20px;
+    
   }
+
+.cartaPrincipal{
+  background: green;
+  width: 75vw;
+  height: 25vh;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  align-items: center;
+
+
+}
+.carta h2{
+  background: green;
+  height: 5vh;
+}
+.informacion{
+  font-size: xx-small;
+}
+
+.cartaPrincipal .carta{
+  background: #708f70;
+  width: 75vw;
+  height: 25vh;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+  justify-content: space-between;
+
+}
+
+.cartaPrincipal .carta h2{
+  font-size: large;
+}
+
+.cartaPrincipal .carta img{
+  width: 100px;
+  height: 100px;
+}
